Code Base/objects/BOM__c.object
<CustomObject>
    <fields>
        <fullName>Assembly_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Assembly Price_Only for code</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assembly_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Assembly Quantity_Only for code</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BomPrice__c</fullName>
        <formula>QuantityUnit__c * UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bom Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BomURL__c</fullName>
        <label>BomURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic Item~E</fullName>
                </value>
                <value>
                    <fullName>Mechanical Item~M</fullName>
                </value>
                <value>
                    <fullName>Consumables~C</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous~MS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinishedProductName__c</fullName>
        <formula>ProductID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FinishedProductName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MakeSupplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Make/Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BOM</relationshipLabel>
        <relationshipName>BOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaterialPartName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Material and Part Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MeasurementUnit__c</fullName>
        <formula>TEXT(Part_Detail_ID__r.MeasurementUnit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Measurement Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartDetailName__c</fullName>
        <formula>Part_Detail_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PartDetailName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartDetailURL__c</fullName>
        <label>PartDetailURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Part_Code__c</fullName>
        <formula>RIGHT(TEXT(Category__c),(LEN(TEXT(Category__c))-FIND(&quot;~&quot;,TEXT(Category__c))))+&apos;-&apos;+
RIGHT(Sub_Category__c,(LEN(Sub_Category__c)-FIND(&quot;~&quot;,Sub_Category__c)))+&apos;-&apos;+
IF(NOT(ISBLANK(Part_Detail_ID__r.Parameter_Value_1__c)) , RIGHT(Part_Detail_ID__r.Parameter_Value_1__c,(LEN(Part_Detail_ID__r.Parameter_Value_1__c)-FIND(&quot;~&quot;,Part_Detail_ID__r.Parameter_Value_1__c))),&apos;&apos;)+
IF(NOT(ISBLANK(Part_Detail_ID__r.Parameter_Value_2__c)) , RIGHT(Part_Detail_ID__r.Parameter_Value_2__c,(LEN(Part_Detail_ID__r.Parameter_Value_2__c)-FIND(&quot;~&quot;,Part_Detail_ID__r.Parameter_Value_2__c))),&apos;&apos;)+
IF(NOT(ISBLANK(Part_Detail_ID__r.Parameter_Value_3__c)) , RIGHT(Part_Detail_ID__r.Parameter_Value_3__c,(LEN(Part_Detail_ID__r.Parameter_Value_3__c)-FIND(&quot;~&quot;,Part_Detail_ID__r.Parameter_Value_3__c))),&apos;&apos;)+
IF(NOT(ISBLANK(Part_Detail_ID__r.Parameter_Value_4__c)) , RIGHT(Part_Detail_ID__r.Parameter_Value_4__c,(LEN(Part_Detail_ID__r.Parameter_Value_4__c)-FIND(&quot;~&quot;,Part_Detail_ID__r.Parameter_Value_4__c))),&apos;&apos;)+
IF(NOT(ISBLANK(Part_Detail_ID__r.Parameter_Value_5__c)) , RIGHT(Part_Detail_ID__r.Parameter_Value_5__c,(LEN(Part_Detail_ID__r.Parameter_Value_5__c)-FIND(&quot;~&quot;,Part_Detail_ID__r.Parameter_Value_5__c))),&apos;&apos;)+
IF(NOT(ISBLANK(Part_Detail_ID__r.Parameter_Value_6__c)) , RIGHT(Part_Detail_ID__r.Parameter_Value_6__c,(LEN(Part_Detail_ID__r.Parameter_Value_6__c)-FIND(&quot;~&quot;,Part_Detail_ID__r.Parameter_Value_6__c))),&apos;&apos;)+
IF(NOT(ISBLANK(Part_Detail_ID__r.Parameter_Value_7__c)) , RIGHT(Part_Detail_ID__r.Parameter_Value_7__c,(LEN(Part_Detail_ID__r.Parameter_Value_7__c)-FIND(&quot;~&quot;,Part_Detail_ID__r.Parameter_Value_7__c))),&apos;&apos;)+
IF(NOT(ISBLANK(Part_Detail_ID__r.Parameter_Value_8__c)) , RIGHT(Part_Detail_ID__r.Parameter_Value_8__c,(LEN(Part_Detail_ID__r.Parameter_Value_8__c)-FIND(&quot;~&quot;,Part_Detail_ID__r.Parameter_Value_8__c))),&apos;&apos;)</formula>
        <label>Part Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <formula>IF(NOT(ISBLANK(Part_Detail_ID__r.Parameter_Value_1__c)) , LEFT(Part_Detail_ID__r.Parameter_Value_1__c,FIND(&quot;~&quot;,Part_Detail_ID__r.Parameter_Value_1__c)-1),&apos;&apos;)+  
IF(ISBLANK(Part_Detail_ID__r.Parameter_Value_2__c), &apos;  &apos;, &apos; / &apos;) +
IF(NOT(ISBLANK(Part_Detail_ID__r.Parameter_Value_2__c)) , LEFT(Part_Detail_ID__r.Parameter_Value_2__c,FIND(&quot;~&quot;,Part_Detail_ID__r.Parameter_Value_2__c)-1),&apos;&apos;)+
IF(ISBLANK(Part_Detail_ID__r.Parameter_Value_3__c), &apos;  &apos;, &apos; / &apos;) +
IF(NOT(ISBLANK(Part_Detail_ID__r.Parameter_Value_3__c)) , LEFT(Part_Detail_ID__r.Parameter_Value_3__c,FIND(&quot;~&quot;,Part_Detail_ID__r.Parameter_Value_3__c)-1),&apos;&apos;)+
IF(ISBLANK(Part_Detail_ID__r.Parameter_Value_4__c), &apos;  &apos;, &apos; / &apos;) +
IF(NOT(ISBLANK(Part_Detail_ID__r.Parameter_Value_4__c)) , LEFT(Part_Detail_ID__r.Parameter_Value_4__c,FIND(&quot;~&quot;,Part_Detail_ID__r.Parameter_Value_4__c)-1),&apos;&apos;)+
IF(ISBLANK(Part_Detail_ID__r.Parameter_Value_5__c), &apos;  &apos;, &apos; / &apos;) +
IF(NOT(ISBLANK(Part_Detail_ID__r.Parameter_Value_5__c)) , LEFT(Part_Detail_ID__r.Parameter_Value_5__c,FIND(&quot;~&quot;,Part_Detail_ID__r.Parameter_Value_5__c)-1),&apos;&apos;)+
IF(ISBLANK(Part_Detail_ID__r.Parameter_Value_6__c), &apos;  &apos;, &apos; / &apos;) +
IF(NOT(ISBLANK(Part_Detail_ID__r.Parameter_Value_6__c)) , LEFT(Part_Detail_ID__r.Parameter_Value_6__c,FIND(&quot;~&quot;,Part_Detail_ID__r.Parameter_Value_6__c)-1),&apos;&apos;)+
IF(ISBLANK(Part_Detail_ID__r.Parameter_Value_7__c), &apos;  &apos;, &apos; / &apos;) +
IF(NOT(ISBLANK(Part_Detail_ID__r.Parameter_Value_7__c)) , LEFT(Part_Detail_ID__r.Parameter_Value_7__c,FIND(&quot;~&quot;,Part_Detail_ID__r.Parameter_Value_7__c)-1),&apos;&apos;)+
IF(ISBLANK(Part_Detail_ID__r.Parameter_Value_8__c), &apos;  &apos;, &apos; / &apos;) +
IF(NOT(ISBLANK(Part_Detail_ID__r.Parameter_Value_8__c)) , LEFT(Part_Detail_ID__r.Parameter_Value_8__c,FIND(&quot;~&quot;,Part_Detail_ID__r.Parameter_Value_8__c)-1),&apos;&apos;)</formula>
        <label>Part Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Detail_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Detail ID</label>
        <referenceTo>Part_Detail__c</referenceTo>
        <relationshipLabel>BOM</relationshipLabel>
        <relationshipName>BOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finished ProductID</label>
        <referenceTo>Materials__c</referenceTo>
        <relationshipLabel>BOM</relationshipLabel>
        <relationshipName>BOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuantityUnit__c</fullName>
        <defaultValue>1</defaultValue>
        <label>General Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RelatedSubAssemblies__c</fullName>
        <label>Related Sub Assemblies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <formula>Text(Part_Detail_ID__r.Sub_Category__c)</formula>
        <label>Sub-Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Quantity_Only for Code</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Enter the amount of a single part</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>BOM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProductID__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Part_Detail_ID__c</columns>
        <columns>Part_Code__c</columns>
        <columns>Part_Description__c</columns>
        <columns>UnitPrice__c</columns>
        <columns>BomPrice__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Consumables</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Consumables~C</value>
        </filters>
        <label>Consumables</label>
    </listViews>
    <listViews>
        <fullName>Electronic</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Electronic Item~E</value>
        </filters>
        <label>Electronic</label>
    </listViews>
    <listViews>
        <fullName>Mechanical</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Mechanical Item~M</value>
        </filters>
        <label>Mechanical</label>
    </listViews>
    <listViews>
        <fullName>Miscellaneous</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Miscellaneous~MS</value>
        </filters>
        <label>Miscellaneous</label>
    </listViews>
    <nameField>
        <displayFormat>PART-{000000}</displayFormat>
        <label>BOM ID No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>